--- a/app/views/to_do_items/_form.html.erb
+++ b/app/views/to_do_items/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_for([@to_do_list, @to_do_list.to_do_items.build]) do |f| %>
- <%= f.text_field :content, placeholder: "New Todo" %>
+ <%= f.text_field :content, placeholder: "New To_do" %>
  <%= f.submit %>
 <% end %>
